<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:clipToPadding="false"
    tools:context=".FilterActivity"
    >

  <View
      android:id="@+id/main_view_background"
      android:layout_width="match_parent"
      android:layout_height="@dimen/top_view_height"
      android:background="@drawable/ic_header"
      />

  <TextView
      android:id="@+id/tv_window_title"
      android:layout_gravity="center_horizontal"
      android:text="@string/activity_filter_title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/WindowTitleTextStyle"
      />

  <ImageView
      android:id="@+id/iv_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/window_horizontal_margin"
      android:layout_marginStart="@dimen/window_horizontal_margin"
      android:src="@drawable/ic_menu"
      app:layout_constraintBottom_toBottomOf="@+id/tv_window_title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tv_window_title"
      />

  <ScrollView
      android:id="@+id/filter_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/window_horizontal_margin"
        android:layout_marginLeft="@dimen/window_horizontal_margin"
        android:layout_marginRight="@dimen/window_horizontal_margin"
        android:layout_marginStart="@dimen/window_horizontal_margin"
        android:paddingBottom="@dimen/filter_card_bottom_padding"
        android:paddingTop="@dimen/main_view_top_padding"
        >

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:elevation="@dimen/filter_card_elevation"
          app:cardCornerRadius="@dimen/filter_card_radius_corner"
          app:layout_constraintTop_toBottomOf="@+id/tv_window_title"
          >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/filter_button_space"
            >

          <TextView
              android:id="@+id/tv_price_range_label"
              android:layout_marginLeft="@dimen/window_horizontal_margin"
              android:layout_marginStart="@dimen/window_horizontal_margin"
              android:layout_marginTop="@dimen/window_vertical_margin"
              android:text="@string/price_per_month_label"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              style="@style/FilterTextLabelStyle"
              />

          <SeekBar
              android:id="@+id/sd_price_range"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/window_horizontal_margin"
              android:layout_marginLeft="@dimen/window_horizontal_margin"
              android:layout_marginRight="@dimen/window_horizontal_margin"
              android:layout_marginStart="@dimen/window_horizontal_margin"
              android:layout_marginTop="@dimen/filter_card_control_top_margin"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tv_price_range_label"
              />

          <TextView
              android:id="@+id/tv_property_type_label"
              android:layout_marginLeft="@dimen/window_horizontal_margin"
              android:layout_marginStart="@dimen/window_horizontal_margin"
              android:layout_marginTop="@dimen/filter_card_label_margin"
              android:text="@string/property_type_label"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/sd_price_range"
              style="@style/FilterTextLabelStyle"
              />

          <android.support.v7.widget.RecyclerView
              android:id="@+id/rv_property_type"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/filter_card_control_top_margin"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tv_property_type_label"
              ></android.support.v7.widget.RecyclerView>

          <TextView
              android:id="@+id/tv_number_of_rooms_label"
              android:layout_marginLeft="@dimen/window_horizontal_margin"
              android:layout_marginStart="@dimen/window_horizontal_margin"
              android:layout_marginTop="@dimen/filter_card_label_margin"
              android:text="@string/number_of_rooms_label"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/rv_property_type"
              style="@style/FilterTextLabelStyle"
              />

          <android.support.v7.widget.RecyclerView
              android:id="@+id/rv_number_of_rooms"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/filter_card_control_top_margin"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tv_number_of_rooms_label"
              ></android.support.v7.widget.RecyclerView>

          <TextView
              android:id="@+id/tv_features_label"
              android:layout_marginLeft="@dimen/window_horizontal_margin"
              android:layout_marginStart="@dimen/window_horizontal_margin"
              android:layout_marginTop="@dimen/filter_card_label_margin"
              android:text="@string/features_label"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/rv_number_of_rooms"
              style="@style/FilterTextLabelStyle"
              />

          <android.support.v7.widget.RecyclerView
              android:id="@+id/rv_features"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/filter_card_control_top_margin"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tv_features_label"
              ></android.support.v7.widget.RecyclerView>

          <TextView
              android:id="@+id/tv_rules_label"
              android:layout_marginLeft="@dimen/window_horizontal_margin"
              android:layout_marginStart="@dimen/window_horizontal_margin"
              android:layout_marginTop="@dimen/filter_card_label_margin"
              android:text="@string/rules_label"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/rv_features"
              style="@style/FilterTextLabelStyle"
              />

          <android.support.v7.widget.RecyclerView
              android:id="@+id/rv_rules"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/filter_card_control_top_margin"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/tv_rules_label"
              ></android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>


      </android.support.v7.widget.CardView>

    </FrameLayout>


  </ScrollView>


  <Button
      android:id="@+id/bt_filter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/filter_card_label_margin"
      android:text="See 999"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      style="@style/ButtonStyle"
      />

</android.support.constraint.ConstraintLayout>